--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -23,6 +23,16 @@ pipeline {
             }
         }
 
+        stage('Terraform Apply') {
+            steps {
+                dir('terraform') {
+                    sh '''
+                        ./terraform apply
+                    '''
+                }
+            }
+        }
+
         stage('Done') {
             steps {
                 echo 'All done!'
