adding -auto-approve flag to apply stage

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -27,7 +27,7 @@ pipeline {
             steps {
                 dir('terraform') {
                     sh '''
-                        ./terraform apply
+                        ./terraform apply -auto-approve
                     '''
                 }
             }
