--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
                         curl -Lo terraform.zip https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
                         unzip -o terraform.zip
                         chmod +x terraform
-                        mv terraform /usr/local/bin/terraform
+                        export PATH=$PWD:$PATH
                     '''
                 }
             }
