--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -29,6 +29,7 @@ pipeline {
             steps {
                 dir('terraform') {
                     sh '''
+                        export PATH=$PWD:$PATH
                         terraform init
                         terraform validate
                     '''
@@ -39,7 +40,10 @@ pipeline {
         stage('Terraform Plan') {
             steps {
                 dir('terraform') {
-                    sh 'terraform plan'
+                    sh '''
+                        export PATH=$PWD:$PATH
+                        terraform plan
+                    '''
                 }
             }
         }
@@ -47,7 +51,10 @@ pipeline {
         stage('Terraform Apply') {
             steps {
                 dir('terraform') {
-                    sh 'terraform apply -auto-approve'
+                    sh '''
+                        export PATH=$PWD:$PATH
+                        terraform apply -auto-approve
+                    '''
                 }
             }
         }
